src/task12_K8s/Task12_3_k8s_calico/manifest_chache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache-deployment
  namespace: app
  labels:
    app: cache
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  cache
  template:
    metadata:
      labels:
        app:  cache
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
          - containerPort: 8082
            name: cache
            protocol: TCP
      nodeName: master-node

---

apiVersion: v1
kind: Service
metadata:
  name: app-cache-svc
  namespace: app
spec:
  selector:
    app: cache
  ports:
    - name: cache
      port: 82
